--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,15 @@
 <html lang="en" dir="rtl">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="" />
+    <link rel="icon" href="./Logo.png"  />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content=" تجربة تسوق مريحة و سهلة و بأسعار مناسبة تطبيق كمّــون لتوصيل المنتجات الغذائية إحصل على متطلبات منزلك الغذائية تصل إلى باب منزلك و توفيرك مضمون " />
+    <meta name="keywords" content="كمّــون,kammun, Sa3ii,تطبيق ساعي,  ساعي"/>
+    <meta name="robots" content=" nofollow">
+    <link rel="apple-touch-icon" href="./Logo.png"  >
+    <link rel='canonical' href='https://parcel.kammun.com/api' />
 
-    <meta name="description"content="Web site created using create-react-app"/>
-    <link href='https://fonts.googleapis.com/css?family=Tajawal' rel='stylesheet'>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    
     <title>Sa3ii </title>
   </head>
   <body>
