--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="./Logo.png"  />
+    <link href='https://fonts.googleapis.com/css?family=Tajawal' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content=" تجربة تسوق مريحة و سهلة و بأسعار مناسبة تطبيق كمّــون لتوصيل المنتجات الغذائية إحصل على متطلبات منزلك الغذائية تصل إلى باب منزلك و توفيرك مضمون " />
     <meta name="keywords" content="كمّــون,kammun, Sa3ii,تطبيق ساعي,  ساعي"/>
