--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,10 @@
 <html lang="en" dir="rtl">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="./Logo.png"  />
+    <link rel="icon" href="./Sa3ii.svg"  />
     <link href='https://fonts.googleapis.com/css?family=Tajawal' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content=" تجربة تسوق مريحة و سهلة و بأسعار مناسبة تطبيق كمّــون لتوصيل المنتجات الغذائية إحصل على متطلبات منزلك الغذائية تصل إلى باب منزلك و توفيرك مضمون " />
+    <meta name="description" content=" تجربة توصيل مريحة و سهلة و بأسعار مناسبة تطبيق ساعي لتوصيل الخدمات البريدية إحصل على متطلباتاتكرالخاصة تصل إلى باب منزلك  " />
     <meta name="keywords" content="كمّــون,kammun, Sa3ii,تطبيق ساعي,  ساعي"/>
     <meta name="robots" content=" nofollow">
     <link rel="apple-touch-icon" href="./Logo.png"  >
