--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,13 @@
 <html lang="en" dir="rtl">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="./Sa3ii.svg"  />
+    <link rel="icon" href="./TopLogo.svg"  />
     <link href='https://fonts.googleapis.com/css?family=Tajawal' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content=" تجربة توصيل مريحة و سهلة و بأسعار مناسبة تطبيق ساعي لتوصيل الخدمات البريدية إحصل على متطلباتاتكرالخاصة تصل إلى باب منزلك  " />
+    <meta name="description" content=" تجربة توصيل مريحة و سهلة و بأسعار مناسبة تطبيق ساعي لتوصيل الخدمات البريدية إحصل على متطلباتاتك الخاصة تصل إلى باب منزلك  " />
     <meta name="keywords" content="كمّــون,kammun, Sa3ii,تطبيق ساعي,  ساعي"/>
     <meta name="robots" content=" nofollow">
-    <link rel="apple-touch-icon" href="./Logo.png"  >
+    <link rel="apple-touch-icon" href="./TopLogo.svg"  >
     <link rel='canonical' href='https://parcel.kammun.com/api' />
 
 
