--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <meta name="robots" content=" nofollow">
     <link rel="apple-touch-icon" href="./TopLogo.svg"  >
     <link rel='canonical' href='https://parcel.kammun.com/api' />
+    <base href="/form/"/>
 
 
     <title>Sa3ii </title>
